--- a/ManagePeopleCompany/Views/Shared/_Layout.cshtml
+++ b/ManagePeopleCompany/Views/Shared/_Layout.cshtml
@@ -9,6 +9,9 @@
     @Scripts.Render("~/bundles/modernizr")
     <script src="~/Scripts/jquery-3.1.1.js"></script>
     <script src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
+    <script src="~/Scripts/jquery-3.3.1.min.js"></script>
+    <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
+
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
